--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -1,3 +1,7 @@
 \chapter{Conclusion}
 
+\section{Future Work}
+*A more extensive investigation of the parameters distribution
+*Using a compliance model
+*restrict parameters more (may not be possible)
 
