just a note added

--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -480,5 +480,7 @@ of the parameters, using unbiased techniques may be called for.
 
 [graph of friston parameters vs. johnston]
 
+[might want to mention dynamic causal modeling]
+
 \section{Conclusion}
 In summary, several other approaches could be taken 
