--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -264,6 +264,7 @@ work, where computation time is very important, that model is
 the best fit.
 
 \section{Noise}
+\label{sec:Introduction Noise}
 As demonstrated in \autoref{sec:BOLD Phsyiology} the BOLD response has been
 extensively studied and despite minor discrepancies, the cause of the BOLD 
 signal is well known. However, as FMRI detects an  
