--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -1,7 +1,7 @@
 \chapter{Particle Filters}
 \label{sec:Particle Filter}
 \section{Introduction}
-Particle filters, a type of Sequential Monte Carlo (SMC) methods
+Particle filters, a type of Sequential Monte Carlo (SMC) methods,
 are a powerful way of estimating the posterior probability distribution
 of a set of parameters give a timeseries of measurements. Unlike Markov 
 Chain Monte Carlo estimation, Sequential Monte-Carlo methods are designed
