started cleaning up notation in particle filter

--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -447,7 +447,7 @@ compound the issues of nonlinearity seen in \autoref{fig:transp1s} and
 \label{fig:trans1s}
 \end{figure}
 
-\section{Hybrid Methods}
+\subsection{Hybrid Methods}
 In \cite{Riera2004}, a maximum
 likelihood method for innovation processes was used, as described by
 \cite{Ozaki1994}. \cite{Ozaki1994} uses a similar construction to a 
